--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://imacqwerty.github.io/Invent",
+  "homepage": "https://Imacqwerty.github.io/Invent",
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
